--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <li>branch</li>
         <li>roll no</li>
         <li>menu</li></ul></div>
+        <img style="height: 200px;" src="/apna_collage/pic.jpg" alt="mypic">
+        <div>
+            <button type="menu" aria-placeholder="press" >preee me</button>
+        </div>
     </div>
     
 </body>
